# x-plant

./: .env.example  .gitignore  Dockerfile  \  docker-compose.yml  pyproject.toml  setup_structure.sh
app/: __init__.py  main.py
app/api/: __init__.py
app/api/v1/: __init__.py  router.py
app/background_jobs/: __init__.py  celery_app.py
app/background_jobs/tasks/: __init__.py  system_health.py
app/shared/: __init__.py
app/shared/config/: __init__.py  settings.py  supabase.py
app/shared/core/: __init__.py  exceptions.py  middleware.py
app/shared/infrastructure/: __init__.py
app/shared/infrastructure/database/: connection.py
docker/redis/: redis.conf
requirements/: base.txt
